<resources>
    <string name="app_name">MontagTEL</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login Form -->
    <string name="login_form_login">"Логин"</string>
    <string name="login_form_password">"Пароль"</string>
    <string name="login_form_signin">"Вход в систему"</string>
    <string name="login_form_loginpassword_error">"пара логин пароль не верны"</string>

    <string name="date_picker">"Выбрать дату"</string>
    <!-- CardView Ticket -->
    <string name="recycle_view_date_lbl">"Заявки на 1.08"</string>
    <string name="card_task_id">"№25134"</string>
    <string name="card_client_id">"ID 41886"</string>
    <string name="card_task_start_id">"12:00"</string>
    <string name="card_clientFIO">"ФИО"</string>
    <string name="card_clientPhone">"+7"</string>
    <string name="card_taskAddress">"Address"</string>
    <string name="card_serviceInfo">"ServiceInfo"</string>
    <!-- calendar Dialog  -->
    <string name="dialog_calendar_task_list_title">"Выберете дату"</string>
    <!-- Detail Ticket -->
    <string name="task_detail_task">"Задачи"</string>
    <string name="task_detail_service_task">"Услуги и задачи"</string>
    <string name="task_detail_add_service_advans">"Добавить доп. услугу"</string>
    <string name="task_detail_exclude_task">"Кроме задач"</string>
    <string name="task_detail_additional_service">"Доп услуги и работы"</string>
    <string name="task_detail_material">"Расходные материалы"</string>
    <string name="task_detail_consumable_by_task">"Добавить расходные материалы"</string>
    <string name="task_detail_pay">"Оплата"</string>
    <string name="task_detail_pay_for_additional_service">"За доп услуги и работы: "</string>
    <string name="task_detail_sum">"0 руб"</string>
    <string name="task_detail_pay_for_device">"За оборудование: "</string>
    <string name="task_detail_pay_for_month">"Абонентская плата: "</string>
    <string name="task_detail_month_sum">"0 руб/мес"</string>
    <string name="task_detail_pay_total">"Всего:"</string>
    <string name="task_detail_pay_method">"Оплата наличными:"</string>
    <string name="task_detail_finish">"Завершить"</string>

    <string name="card_view_lbl_task_service_name">"Название сервиса"</string>

    <!-- Navigation View header-->
    <string name="user">"Никита Веселов"</string>
    <string name="userPhone">"+7(926)2422316"</string>
    <!-- Navigation View menu-->
    <string name="graphic">"График"</string>
    <string name="calendar">"Календарь"</string>
    <string name="contacts">"Контакты"</string>
    <string name="new_account">"Приведенный абонент"</string>
    <string name="logout">"Выход"</string>
    <string name="title_activity_contact">ContactActivity</string>

    <!-- Contacts -->
    <string name="ContactTextLableSTP">"СТП"</string>
    <string name="ContactTextLableSecretary">"Секретари"</string>
    <string name="ContactTextLableAccounts">"Аккаунты"</string>
    <string name="ContactBtnText">"Открыть"</string>
    <string name="title_activity_task_list">TaskListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- Service Advans-->
    <string name="service_advans_name">"Протяжка кабеля"</string>
    <string name="service_advans_frame_title">"Выбор доп услуги"</string>
    <!-- Consume Fragment -->
    <string name="consume_name">"Consume name"</string>
    <string name="consume_add_btn">"Добавить в заявку"</string>
    <string name="consume_count">"0"</string>

</resources>