<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/graphic"
          android:title="@string/graphic"
          android:orderInCategory="1"
          android:icon="@mipmap/ic_graphic"
    />
    <item android:id="@+id/calendar"
          android:title="@string/calendar"
          android:icon="@mipmap/ic_calendar"
          android:orderInCategory="2"/>

    <item android:id="@+id/contacts"
          android:title="@string/contacts"
          android:orderInCategory="3"
          android:icon="@mipmap/ic_contacts"/>

    <item android:id="@+id/new_account"
          android:title="@string/new_account"
          android:orderInCategory="4"
          android:icon="@mipmap/ic_dollar"/>

    <item android:id="@+id/logout"
          android:title="@string/logout"
          android:orderInCategory="5"
          android:icon="@mipmap/ic_logout"
          />

</menu>