<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="15dp">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/cardViewTicket">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/card_task_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/task_id"/>
            <TextView
                    android:text="@string/card_clientFIO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/taskAddress"
                    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                    android:id="@+id/clientFIO"/>
            <TextView
                    android:text="@string/card_clientPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_below="@+id/clientFIO"
                    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                    android:id="@+id/clientPhone"/>
            <TextView
                    android:text="@string/card_taskAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/taskAddress"
                    android:layout_below="@+id/task_id"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            <TextView
                    android:text="@string/card_serviceInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serviceInfo"
                    android:layout_below="@+id/clientPhone"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

