<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/cardViewTicket">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
        <TextView
                android:text="@string/card_task_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="left"
                android:textSize="15sp"
                android:id="@+id/task_id"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/card_client_id"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:textAlignment="center"
                  android:layout_above="@+id/taskAddress"
                  android:textSize="15sp"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:id="@+id/client_id"
                  android:textStyle="normal|bold"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/card_task_start_id"
                  android:textSize="15sp"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:id="@+id/task_start"
                  android:gravity="right"/>

        <TextView
                android:text="@string/card_clientFIO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_below="@+id/taskAddress"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                android:id="@+id/clientFIO"/>
        <TextView
                android:text="@string/card_clientPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_below="@+id/clientFIO"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                android:id="@+id/clientPhone"/>
        <TextView
                android:text="@string/card_taskAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/taskAddress"
                android:layout_below="@+id/task_id" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>