<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.tel.inoob.montagtel.MainScreen">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#dedede"
            android:padding="10dp"
            android:hint="@string/login_form_login"
            android:id="@+id/login"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#dedede"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/login_form_password"
            android:inputType="textPassword"
            android:id="@+id/password"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorTaskButtons"
            android:textColor="@color/white"
            android:text="@string/login_form_signin"
            android:id="@+id/Sign_in"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/login_form_loginpassword_error"
            android:id="@+id/wrongData"
            android:visibility="invisible"/>
</LinearLayout>
