<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_contact"
            tools:context="com.tel.inoob.montagtel.Activities.ContactActivity">


        <TextView
                android:text="@string/ContactTextLableSTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textSTP"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp" android:layout_marginTop="16dp"/>
        <Button
                android:text="@string/ContactBtnText"
                android:layout_width="wrap_content"
                android:background="@color/colorOpenButtons"
                android:textColor="@color/white"
                android:id="@+id/stp_btn"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_height="30dp"/>
        <View android:background="@color/color_task_list_separator_line"
              app:layout_constraintTop_toBottomOf="@+id/stp_btn"
              android:layout_marginTop="8dp" android:id="@+id/view3" android:layout_height="1dp"
              android:layout_width="wrap_content" app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
        />

        <TextView
                android:text="@string/ContactTextLableSecretary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSecretary"
                app:layout_constraintTop_toBottomOf="@+id/view3" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"/>
        <Button
                android:text="@string/ContactBtnText"
                android:layout_width="wrap_content"
                android:background="@color/colorOpenButtons"
                android:textColor="@color/white"
                android:id="@+id/secretary_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_height="30dp"/>

    <View android:background="@color/color_task_list_separator_line"
          app:layout_constraintTop_toBottomOf="@+id/secretary_btn"
          android:layout_marginTop="8dp" android:id="@+id/view4"
          android:layout_width="wrap_content" app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_height="1dp"/>

        <TextView
                android:text="@string/ContactTextLableAccounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAccount"
                app:layout_constraintTop_toBottomOf="@+id/view4" android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"/>
        <Button
                android:text="@string/ContactBtnText"
                android:layout_width="wrap_content"
                android:background="@color/colorOpenButtons"
                android:textColor="@color/white"
                android:id="@+id/account_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_height="30dp"/>

    <View android:background="@color/color_task_list_separator_line"
          app:layout_constraintTop_toBottomOf="@+id/account_btn"
          android:layout_marginTop="8dp" android:id="@+id/view5"
          android:layout_width="wrap_content" app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_height="1dp"/>

</android.support.constraint.ConstraintLayout>

